# fake-it-til-you-make-it-mocks

./: .python-version  Makefile  README.md  fake-it-til-you-make-it-mocks.qmd  pyproject.toml
examples/: manageritm_client_example.py  requests_mock_example.py
tests/: test_manageritm_client.py
